feat: JWT implementation Jakarta